# python-plotting-skill

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  first-use-feedback.yml  template-request.yml
.github/workflows/: issue-triage.yml  quality.yml
docs/: agent-workflow.md  application-evidence.md  chart-selection.md  provenance-policy.md  v0.2-template-candidates.md
docs/gallery/: index.md  manifest.json  provenance.md
scripts/: check_gallery.py  check_repository.py  release_check.sh  render_gallery.py
skills/python-plotting-skill/: SKILL.md
skills/python-plotting-skill/agents/: openai.yaml
tests/: test_chart_selection_docs.py  test_check_gallery_cli.py  test_gallery_manifest.py  test_render_gallery_cli.py  test_repository_contract.py
