[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "python-plotting-skill"
version = "0.1.0"
description = "A Codex skill for clean Python scientific plotting workflows."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.setuptools]
packages = []
